--- a/package.json
+++ b/package.json
@@ -47,6 +47,12 @@
     "stylelint-order": "^0.8.1",
     "stylelint-scss": "^3.2.0"
   },
+  "keywords": [
+    "redux",
+    "react",
+    "modal",
+    "modals"
+  ],
   "main": "lib/index.js",
   "name": "redux-react-modals",
   "private": false,
@@ -59,5 +65,5 @@
     "watch": "nodemon --watch src --exec \"npm run compile\"",
     "test:unit": "yarn jest --env=jsdom ./src"
   },
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
