--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "modal",
     "modals"
   ],
+  "license": "Mozilla Public License",
   "main": "lib/index.js",
   "name": "redux-react-modals",
   "private": false,
@@ -62,8 +63,8 @@
     "precommit": "./precommit.sh",
     "prettier": "$(yarn bin)/prettier --write 'src/**/*.js'",
     "prepublish": "npm run compile",
-    "watch": "nodemon --watch src --exec \"npm run compile\"",
-    "test:unit": "yarn jest --env=jsdom ./src"
+    "test": "yarn jest --env=jsdom ./src",
+    "watch": "nodemon --watch src --exec \"npm run compile\""
   },
-  "version": "0.0.11"
+  "version": "1.0.0"
 }
