--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "modal",
     "modals"
   ],
-  "license": "Mozilla Public License",
+  "license": "MPL-2.0",
   "main": "lib/index.js",
   "name": "redux-react-modals",
   "private": false,
@@ -66,5 +66,5 @@
     "test": "yarn jest --env=jsdom ./src",
     "watch": "nodemon --watch src --exec \"npm run compile\""
   },
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
