--- a/package.json
+++ b/package.json
@@ -57,12 +57,12 @@
   "scripts": {
     "compile": "rm -rf lib && babel --plugins transform-class-properties,transform-object-rest-spread --presets env,react -d lib/ src/",
     "format:js": "prettier-eslint --write './**/*.{js,jsx}'",
-    "postinstall": "if [ -d \"src/\" ]; then npm run compile; fi",
+    "postinstall": "if [ -d \"src/\" ]; then yarn run compile; fi",
     "precommit": "./precommit.sh",
     "prettier": "$(yarn bin)/prettier --write 'src/**/*.js'",
-    "prepublish": "npm run compile",
+    "prepublish": "yarn run compile",
     "test": "yarn jest --env=jsdom ./src",
-    "watch": "nodemon --watch src --exec \"npm run compile\""
+    "watch": "nodemon --watch src --exec \"yarn run compile\""
   },
   "version": "1.0.1"
 }
