--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "url": "https://github.com/betagouv/redux-react-modals"
   },
   "dependencies": {
-    "classnames": "2.2.5",
+    "classnames": "2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
@@ -26,8 +27,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^7.0.0-0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^23.4.2",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.9.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -35,24 +36,15 @@
     "babel-preset-react": "^6.22.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.2.1",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jest": "^22.7.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
-    "jest": "^23.4.2",
+    "jest": "^24.9.0",
     "jest-environment-jsdom": "^24.5.0",
     "nodemon": "^1.11.0",
-    "prettier": "1.12.1",
-    "prettier-eslint-cli": "^5.0.0",
-    "prettier-stylelint": "^0.4.2",
-    "pretty-quick": "^1.6.0",
-    "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^16.5.1",
-    "stylelint": "^9.4.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^0.8.1",
-    "stylelint-scss": "^3.2.0"
+    "prettier-eslint-cli": "^5.0.0"
   },
   "keywords": [
     "redux",
