--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.0.5"
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
