--- a/package.json
+++ b/package.json
@@ -19,20 +19,16 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^7.0.0-0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.9.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.22.0",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.1",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "@babel/preset-react": "^7.10.1",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^26.0.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^6.2.1",
@@ -40,9 +36,10 @@
     "eslint-plugin-jest": "^22.7.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
-    "jest": "^24.9.0",
-    "jest-environment-jsdom": "^24.5.0",
-    "nodemon": "^1.11.0",
+    "husky": "^4.2.5",
+    "jest": "^25.1.0",
+    "jest-environment-jsdom": "^25.1.0",
+    "nodemon": "^2.0.4",
     "prettier-eslint-cli": "^5.0.0"
   },
   "keywords": [
@@ -52,7 +49,7 @@
     "modals"
   ],
   "scripts": {
-    "compile": "rm -rf lib && babel --plugins transform-class-properties,transform-object-rest-spread --presets env,react -d lib/ --ignore tests src/",
+    "compile": "rm -rf lib && npx babel -d lib/ --ignore tests src/",
     "format:js": "prettier-eslint --write './**/*.{js,jsx}'",
     "postinstall": "if [ -d 'src/' ]; then yarn run compile; fi",
     "precommit": "./precommit.sh",
